<resources>
    <string name="app_name">Movie</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_continue">please sign in to continue</string>
    <string name="hint_password">PASSWORD</string>
    <string name="hint_email">EMAIL</string>
    <string name="sign_up">Don\'t have an account? <b>Sign up</b></string>
    <string name="sign_in">Already have an account? <b>Sign in</b></string>
    <string name="create_account">CreateAccount</string>
    <string name="hint_full_name">FULL NAME</string>
    <string name="hint_phone">PHONE</string>
    <string name="create">Create</string>
    <string name="item_movies">Movies</string>
    <string name="item_user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="peliculas_alquiladas">100 películas alquiladas</string>

</resources>